# op

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README_EN.md  build.bat  build.cmd  build.py  make_Visual_Studio_2019.bat  makefile  mkDebug.bat  mkRelease.bat  op.code-workspace  op.sln  pyproject.toml  s-ocr.txt  tmp_heredoc_test.txt  todo.md
bindings/python/: README.md  pyproject.toml
com/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpInterface.cpp  OpInterface.h  cmake_install.cmake  dllmain.cpp  op.idl  op_x64.vcxproj  op_x64.vcxproj.filters
libop/: CMakeLists.txt  OpInterface.rgs  RCa19360  c_libop.cpp  c_libop.h  cmake_install.cmake  compreg.cpp  compreg.h  dllmain.h  libop.cpp  libop.h  libopExport.cpp  libopExport.h  op.rc  op.rgs  op.vcxproj.filters  readme.md  resource.h  stdafx.cpp  stdafx.h
libop/algorithm/: AStar.h  AStar.hpp
libop/background/: Bkbase.cpp  Bkbase.h  Bkgdi.cpp  Bkgdi.h  Bkkeypad.cpp  Bkmouse.cpp  Bkmouse.h  IDisplay.cpp  IDisplay.h  bkdx_gl.cpp  bkdx_gl.h  displayInputHelper.cpp  displayInputHelper.h  dxmouse.cpp  dxmouse.h  opBackground.cpp  opBackground.h  winkeypad.cpp  xhook.cpp  xhook.h
libop/base/: AutomationModes.h  Environment.cpp  Environment.h  JsonUtils.h  ThreadPool.h  Types.h  Utils.cpp  Utils.h  WindowsHandle.h  WindowsVersion.cpp
libop/binding/: BindingSession.cpp  BindingSession.h
libop/c_api/: op_c_api.cpp  op_c_api.rc
libop/capture/: FrameInfo.cpp  FrameInfo.h  ICaptureBackend.cpp  ICaptureBackend.h
libop/client/: ClientAlgorithm.cpp  ClientClipboard.cpp  ClientContext.cpp  ClientContext.h  ClientImage.cpp  ClientInput.cpp  ClientMemory.cpp  ClientOcr.cpp  ClientOpenCv.cpp  ClientProcess.cpp  ClientResult.h  ClientRuntime.cpp  ClientWindow.cpp  ClientYolo.cpp
libop/com/: OpAutomation.cpp  OpAutomation.h  OpAutomation.rgs  OpInterface.cpp  OpInterface.h  OpInterface.rgs  compreg.cpp  compreg.h  dllmain.cpp  dllmain.h  op.cpp  op.def  op.idl  op.rc  op_i.c  op_i.h  resource.h  stdafx.h
libop/core/: Cmder.h  Pipe.cpp  Pipe.h  diaGuids.cpp  globalVar.cpp  globalVar.h  helpfunc.cpp  helpfunc.h  opEnv.cpp  opEnv.h  optype.h  win_version.cpp  win_version.h  window_layout.cpp  window_layout.h
libop/hook/: ApiResolver.cpp  ApiResolver.h  D3D10Capture.cpp  D3D10Capture.h  D3D11Capture.cpp  D3D11Capture.h  D3D12Capture.cpp  D3D12Capture.h  D3D9Capture.cpp  D3D9Capture.h  DisplayHook.cpp  DisplayHook.h  Dx12Hook.cpp  Dx12Hook.h  DxCaptureCommon.cpp  DxCaptureCommon.h  HookExport.cpp  HookExport.h  HookModule.h  HookProtocol.h  InputHook.cpp  InputHook.h  InputHookClient.cpp  InputHookClient.h  MinHookRuntime.cpp  MinHookRuntime.h  OpenGLCapture.cpp  OpenGLCapture.h  SharedFrame.h  dinput.md
libop/image/: BitFunctions.h  Color.h  Image.h  ImageSearchAlgorithms.cpp  ImageSearchAlgorithms.h  ImageSearchService.cpp  ImageSearchService.h  ImageView.h
libop/imageProc/: HttpWrapper.cpp  HttpWrapper.h  ImageLoc.cpp  ImageLoc.h  ImageProc.cpp  ImageProc.h  OcrWrapper.cpp  OcrWrapper.h  YoloWrapper.cpp  YoloWrapper.h  imageView.hpp  tess_ocr.cpp  tess_ocr.h
libop/include/: Dict.h  Image.hpp  bitfunc.h  color.h  promutex.h  sharedmem.h
libop/input/: InputMessageUtils.h
libop/interface/: libop.cpp
libop/ipc/: CommandRunner.h  Pipe.cpp  Pipe.h  ProcessMutex.h  SharedMemory.h
libop/memory/: ProcessMemory.cpp  ProcessMemory.h
libop/network/: HttpClient.cpp  HttpClient.h
libop/ocr/: Dictionary.h  OcrService.cpp  OcrService.h  TesseractOcr.cpp  TesseractOcr.h
libop/op/: OpAlgorithm.cpp  OpCaptureHelpers.h  OpClipboard.cpp  OpContext.cpp  OpContext.h  OpImage.cpp  OpInput.cpp  OpMemory.cpp  OpOcr.cpp  OpOpenCv.cpp  OpProcess.cpp  OpResult.h  OpRuntime.cpp  OpWindow.cpp  OpYolo.cpp
libop/opencv/: ImagePreprocessor.h  OpenCvBridge.cpp  OpenCvBridge.h  OpenCvHelpers.cpp  OpenCvHelpers.h  OpenCvModule.cpp  TemplateMatcher.cpp  TemplateMatcher.h
libop/runtime/: AutomationModes.cpp  AutomationModes.h  RuntimeEnvironment.cpp  RuntimeEnvironment.h  RuntimeUtils.cpp  RuntimeUtils.h  ThreadPool.h  Types.h  WindowsHandle.h  WindowsVersion.h
libop/winapi/: Injecter.cpp  Injecter.h  MemoryEx.cpp  MemoryEx.h  WinApi.cpp  WinApi.h  query_api.cpp  query_api.h
libop/window/: DllInjector.cpp  DllInjector.h  WindowLayout.cpp  WindowLayout.h  WindowProcess.cpp  WindowService.cpp  WindowService.h  WindowState.cpp  WindowText.cpp
libop/yolo/: YoloDetector.cpp  YoloDetector.h
op/: AStar.hpp  BackGround.cpp  BackGround.h  Bkbase.cpp  Bkbase.h  Bkdisplay.cpp  Bkdisplay.h  Bkdx.cpp  Bkdx.h  Bkgdi.cpp  Bkgdi.h  Bkkeypad.cpp  Bkkeypad.h  Bkmouse.cpp  Bkmouse.h  Bkwindows.cpp  Bkwindows.h  CMakeLists.txt  Cmder.h  Common.h  DX9hook.cpp  DX9hook.h  DXBackground.cpp  DXBackground.h  Dict.h  DisplayBase.cpp  DisplayBase.h  IDisplay.cpp  IDisplay.h  ImageLoc.cpp  ImageLoc.h  ImageProc.cpp  ImageProc.h  Injecter.cpp  Injecter.h  MemoryEx.cpp  MemoryEx.h  OpInterface.cpp  OpInterface.h  Pipe.cpp  (+38 more)
op/Color/: color.h
python/: CMakeLists.txt  README.md  test.py
qttool/: BindWidget.cpp  BindWidget.h  CMakeLists.txt  EditImage.cpp  EditImage.h  MainWindow.cpp  MainWindow.h  Mbutton.hpp  Tool.cpp  Tool.h  Tool.qrc  Tool.rc  cap_dialog.h  editImg.ui  get_color_dlg.cpp  get_color_dlg.h  main.cpp  op_test.ui  resource.h  roman.dict  system_font.ui  systemfont_dlg.cpp  systemfont_dlg.h  temp.dict  test.dict  test2.dict  toolWidget.ui
swig/: CMakeLists.txt  genPythonWrap.bat  op.i  opEx.py  op_wrap.c  op_wrap.cxx  pyop.py
tests/: CMakeLists.txt  core_algorithm_winapi_test.cpp  core_algorithm_windows_test.cpp  handle_compat_test.cpp  image_color_test.cpp  main.cpp  mouse_keyboard_test.cpp  ocr_test.cpp  op_algorithm_windows_test.cpp  op_test.h  opencv_test.cpp  optest.hpp  test.h  test_support.cpp  test_support.h  utils_test.cpp  wgc_test.cpp  yolo_test.cpp
tools/: CMakeLists.txt  EasyCom.cpp  EasyCom.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  dllmain.c  framework.h  op_yolo_engine.py  tools.vcxproj  tools.vcxproj.filters
(+205 files in other folders)
